--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Nomads -- Juvenile fiction'
 - !lcsh 'Voyages and travels -- Juvenile fiction'
+- GITenberg
 title: 'Born to Wander: A Boy''s Book of Nomadic Adventures'
 url: http://www.gutenberg.org/ebooks/37252
